# mkmapdiary

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  calculate_tile_level.py  mkdocs.yml  pyproject.toml  test.py  wtest.py
.github/workflows/: publish-docs.yml  release.yml
docs/: command-reference.md  index.md  util.py
docs/explanation/development/: challenges.md
docs/how-to_guides/: index.md  setup-poi-detection.md
docs/reference/: commands.md  configuration.md  index.md  poi-index-format.md  task-dependencies.md  task-dependencies.puml
docs/reference/development/: commit-prefixes.md  dev-commands.md
docs/reference/supported_source_formats/: canon_raw_v2.md  common_audio.md  common_image.md  gps_exchange_format.md  index.md  markdown.md  plain_text.md  qstarz_bl-1000.md
snippets/: filters.txt  poi.py
src/mkmapdiary/: __main__.py  cache.py  db.py  generate_demo.py  geoCluster.py  gpxCreator.py  main.py  poiIndex.py  poiIndexBuilder.py  taskList.py
src/mkmapdiary/commands/: build.py  calibrate.py  config.py  generate_demo.py  inspect.py
src/mkmapdiary/extras/: defaults.yaml  extra.sass  gallery.js  geo.js  poi_filter_config.yaml  site_config.yaml
src/mkmapdiary/lib/: asset.py  assetRegistry.py  calibration.py  config.py  dirs.py  fmt.py  geoCluster.py  gpxCreator.py  highlights.py  llm.py  llm_classes.py  startPage.py  statistics.py
src/mkmapdiary/locale/de/LC_MESSAGES/: messages.mo  messages.po
src/mkmapdiary/locale/en/LC_MESSAGES/: messages.mo  messages.po
src/mkmapdiary/poi/: ballTree.py  ballTreeBuilder.py  common.py  index.py  indexBuilder.py  indexFileReader.py  indexFileWriter.py  regionFinder.py
src/mkmapdiary/postprocessors/: autoRotator.py  constImageQualityAssessment.py  duplicateDetector.py  entropyCalculator.py  imageEmbedder.py  imageHasher.py  imageQualityAssessment.py  imageSummarizer.py  journalSummarizer.py  piqImageQualityAssessment.py  qualityAssessment.py  simpleImageQualityAssessment.py
src/mkmapdiary/postprocessors/base/: basePostprocessor.py  multiAssetPostprocessor.py  singleAssetPostprocessor.py
src/mkmapdiary/resources/: audio.js  calibrate_schema.yaml  config_schema.yaml  debug_fast.yaml  defaults.yaml  extra.sass  gallery.js  geo.js  logging.yaml  poi_filter_config.yaml  site_config.yaml
src/mkmapdiary/tasks/: __init__.py  audioTask.py  cr2Task.py  dayPageTask.py  galleryTask.py  geojsonTask.py  gpsbabelInputTask.py  gpxTask.py  imageTask.py  journalTask.py  markdownTask.py  postprocessingTask.py  qstarzTask.py  rawInputTask.py  siteTask.py  tagsTask.py  textTask.py
src/mkmapdiary/tasks/base/: baseTask.py  exifReader.py  geoLookup.py  httpRequest.py  multiFormat.py
src/mkmapdiary/templates/: day_gallery.j2  day_journal.j2  index.j2
src/mkmapdiary/util/: __init__.py  algo.py  cache.py  locale.py  log.py  os.py  osm.py  projection.py  units.py
tdgen/: __main__.py  cache.py  db.py  defaults.yaml  defaults_de.yaml  generator.py  geoCluster.py  gpxCreator.py  taskList.py  tasks.py
tdgen/extras/: audio.js  defaults.yaml  extra.js  extra.sass  geo.js  geo.schema.yaml  site_config.yaml
tdgen/locale/de/LC_MESSAGES/: messages.mo  messages.po
tdgen/tasks/: __init__.py  audioTask.py  baseTask.py  cr2Task.py  dayPageTask.py  galleryTask.py  geojsonTask.py  gpxTask.py  imageTask.py  journalTask.py  markdownTask.py  qstarzTask.py  siteTask.py  site_config.yaml  tagsTask.py  textTask.py
tdgen/tasks/base/: baseTask.py  exifReader.py  geoLookup.py  httpRequest.py
tdgen/templates/: date_base.j2  day_base.j2  day_gallery.j2  day_journal.j2  index.j2  transcript_segment.j2
tests/: test_batch_reduce.py  test_calibrate.py  test_config.py  test_config_functions.py  test_docs_util.py  test_env.py  test_geo_cluster_math.py  test_rank.py  test_region_finder.py  test_start_page_matrix.py  test_util_algo.py  test_util_osm_locale.py
tools/: demo.py  update_translations.py
util/: update_translations.py
