[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mkmapdiary"
dynamic = ["version"]
description = 'A travel journal generator'
readme = "README.md"
requires-python = ">=3.8"
license = "PolyForm-Noncommercial-1.0.0"
keywords = []
authors = [
  { name = "Janna Hopp" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "click",
    "pyyaml",
    "mkdocs-glightbox",
    "mkdocs-material",
    "mkdocs",
    "doit",
    "identify",
    "Pillow",
    "rawpy",
    "imageio",
    "pyexiftool",
    "tabulate",
    "libsass",
    "requests",
    "jsonschema",
    "lxml",
    "pydub",
    "ollama",
    "gpxpy",
    "hdbscan",
    "pyrosm",
    "msgpack",
    "osmium>=4.0.0",
    "wcwidth"
]

[project.optional-dependencies]

transcription = [
    "openai-whisper",
]

all = [
    "openai-whisper",
]

[project.scripts]
mkmapdiary = "mkmapdiary.__main__:start"

[project.urls]
Documentation = "https://bytehexe.github.io/mkmapdiary/"
Issues = "https://github.com/bytehexe/mkmapdiary/issues"
Source = "https://github.com/bytehexe/mkmapdiary"

[tool.taskipy.tasks]

test = { help = "Run linters and unittests", cmd = "pre-commit run -a" }
serve = { help = "Start mkdocs server", cmd = "hatch run mkdocs:serve" }
demo = { help="Create (if needed) and run the demo", cmd = "hatch run ./tools/demo.py" }
example = { help="Run on the example directory", cmd="hatch run mkmapdiary -Ba ./example" }
translate = { help="Update translation mo files", cmd = "./tools/update_translations.py" }
lint = { help="An alias for 'test'", cmd="task test" }
run = { help="Run mkmapdiary with the given arguments", cmd="hatch run mkmapdiary" }
run-min = { help="Run mkmapdiary with the given arguments (without extras)", cmd="hatch run min:mkmapdiary" }
fix = { help="Run linters in fix mode", cmd="python -m autoflake -ri .; python -m isort .; black ."}

[tool.pytest.ini_options]
markers = [
    "slow: a test that takes a long time to run.",
    "local: a test that should not run in the pipeline (e.g. due to caching).",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.vcs]
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/mkmapdiary/__about__.py"

[tool.hatch.envs.default]
features = ["all"]

[tool.hatch.envs.min]
features = []

[tool.hatch.envs.licenses]
extra-dependencies = [
  "pip-licenses",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
features = []

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mkmapdiary tests}"

[tool.hatch.envs.mkdocs]
skip-install = true
detached = true
dependencies = [
    "mkdocs-material",
]

[tool.hatch.envs.mkdocs.scripts]

serve = "PYTHONPATH=docs/ mkdocs serve --livereload"

[[tool.mypy.overrides]]
module="exiftool.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="doit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="hdbscan.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="whisper.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="rawpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="wcwidth.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="pydub.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="msgpack.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="pyrosm.*"
ignore_missing_imports = true

[tool.coverage.run]
source_pkgs = ["mkmapdiary", "tests"]
branch = true
parallel = true
omit = [
  "src/mkmapdiary/__about__.py",
]

[tool.coverage.paths]
mkmapdiary = ["src/mkmapdiary", "*/mkmapdiary/src/mkmapdiary"]
tests = ["tests", "*/mkmapdiary/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"